fixed cycle page overflowing container

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   width: 85%;
+  max-height: 100vh;
 }
 
 
